<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsmileSC_SRP_SM Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

     <string name="iteration">Iterations</string>
     <string name="readers">Readers</string>
     <string name="datalength">Data Length</string>
     <string name="key_agreement">Initiate Channel</string>
     <string name="secure_session">Secure Messaging</string>

    
    <string-array name="datalength">
        <item>16</item>
        <item>32</item>
        <item>48</item>
        <item>64</item>
        <item>128</item>
        <item>200</item>
    </string-array>
    
    <string-array name="iteration">
         <item>1</item>
          <item>2</item>
          <item>3</item>
          <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    
    
</resources>
